tests/idris2/error/error003/expected
1/1: Building Error (Error.idr)
Error: While processing right hand side of wrong. Sorry, I can't find any elaboration which works. All errors:
If Main.length: When unifying:
    Nat
and:
    Vect ?n ?a
Mismatch between: Nat and Vect ?n ?a.

Error:12:18--12:19
 08 | length [] = Z
 09 | length (x :: xs) = S (length xs)
 10 |
 11 | wrong : Nat -> Nat
 12 | wrong x = length x
                       ^

If Prelude.List.length: When unifying:
    Nat
and:
    List ?a
Mismatch between: Nat and List ?a.

Error:12:18--12:19
 08 | length [] = Z
 09 | length (x :: xs) = S (length xs)
 10 |
 11 | wrong : Nat -> Nat
 12 | wrong x = length x
                       ^

If Prelude.SnocList.length: When unifying:
    Nat
and:
    SnocList ?a
Mismatch between: Nat and SnocList ?a.

Error:12:18--12:19
 08 | length [] = Z
 09 | length (x :: xs) = S (length xs)
 10 |
 11 | wrong : Nat -> Nat
 12 | wrong x = length x
                       ^

If Prelude.String.length: When unifying:
    Nat
and:
    String
Mismatch between: Nat and String.

Error:12:18--12:19
 08 | length [] = Z
 09 | length (x :: xs) = S (length xs)
 10 |
 11 | wrong : Nat -> Nat
 12 | wrong x = length x
                       ^

